bug fix: chart appears squished at screen widths like 1220px

--- a/src/pages/Chart/Chart.css
+++ b/src/pages/Chart/Chart.css
@@ -163,7 +163,8 @@ div.tooltip {
     transition: 0.8s all ease-in-out;
 }
 
-d3fc-canvas>canvas, d3fc-svg>svg {
+d3fc-canvas > canvas,
+d3fc-svg > svg {
     height: inherit;
     width: inherit;
 }
@@ -305,8 +306,7 @@ label {
     }
 }
 
-@media (max-width: 1267px) and (min-width: 1200px) {
-
+@media (max-width: 1200px) and (min-width: 1200px) {
     .chart_grid {
         height: 50%;
     }
